// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test umi-create test generate antd pro project from gitee.org 1`] = `
"? Select the boilerplate type (Use arrow keys)
❯ ant-design-pro  - Create project with a layout-only ant-design-pro boilerplate
, use together with umi block. 
  app             - Create project with a simple boilerplate, support typescript
. 
  block           - Create a umi block. 
  library         - Create a library with umi. 
  plugin          - Create a umi plugin. [41D[41C[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G? Select the boilerplate type ant-design-pro[44D[44C
? 🤓 Which language do you want to use? (Use arrow keys)
❯ TypeScript 
  JavaScript [13D[13C[2K[1A[2K[1A[2K[G? 🤓 Which language do you want to use? TypeScript[49D[50C
? 🦄 Time to use better, faster and latest antd@4! (Y/n) [56D[57C[2K[G? 🦄 Time to use better, faster and latest antd@4! Yes[53D[54C
❯ 🚚 clone success
❯ Clean up...
✨ File Generate Done
"
`;

exports[`test umi-create test generate antd pro project from github 1`] = `
"? Select the boilerplate type (Use arrow keys)
❯ ant-design-pro  - Create project with a layout-only ant-design-pro boilerplate
, use together with umi block. 
  app             - Create project with a simple boilerplate, support typescript
. 
  block           - Create a umi block. 
  library         - Create a library with umi. 
  plugin          - Create a umi plugin. [41D[41C[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G? Select the boilerplate type ant-design-pro[44D[44C
? 🤓 Which language do you want to use? (Use arrow keys)
❯ TypeScript 
  JavaScript [13D[13C[2K[1A[2K[1A[2K[G? 🤓 Which language do you want to use? 
  TypeScript 
❯ JavaScript [13D[13C[2K[1A[2K[1A[2K[G? 🤓 Which language do you want to use? JavaScript[49D[50C
? 🦄 Time to use better, faster and latest antd@4! (Y/n) [56D[57C[2K[G? 🦄 Time to use better, faster and latest antd@4! Yes[53D[54C
❯ 🚚 clone success
❯ [Sylvanas] Prepare js environment...
❯ [JS] Clean up...
❯ Clean up...
✨ File Generate Done
"
`;
